resolve z-index & ins linear-gradient

--- a/postit.css
+++ b/postit.css
@@ -13,7 +13,7 @@ body {
   border: 1px solid;
   width: 250px;
   height: 250px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 10px 8px rgb(0, 0, 0, 0);
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -28,17 +28,17 @@ p {
   font-style: italic;
 }
 .yellow {
-  background-color: rgb(234, 235, 180);
+  background-image: linear-gradient(rgb(234, 235, 180), rgb(147, 149, 31));
   transform: rotate(355deg);
   transition: transform, 1s;
 }
 .green {
-  background-color: rgb(188, 226, 189);
+  background-image: linear-gradient(rgb(188, 226, 189), rgb(121, 123, 121));
   transform: rotate(5deg);
   transition: transform, 1s;
 }
 .cartadazucchero {
-  background-color: rgb(193, 194, 235);
+  background-image: linear-gradient(rgb(193, 194, 235), rgb(43, 44, 73));
   transform: rotate(358deg);
   transition: transform, 1s;
 }
@@ -50,4 +50,7 @@ p {
 }
 .cartadazucchero:hover {
   transform: scale(1.2);
+}
+.postit:hover {
+  z-index: 1;
 }
